# py_package

./: README.md  pyproject.toml  test_1.py
docs/: data_science_architecture.puml  library_setuptools.md  package_development.puml
py_package/: __init__.py  package_list.py  setup.py
py_package/tests/: test_package.py
src/pyprespipe/: __init__.py
src/pyprespipe/tests/: test_pressure_pipe.py
